dockerize + merge docker compose